[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.4"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/emesh-converter"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha.4" }
emesh = { version = "0.0.1-alpha.4" }
egraphics = { version = "0.0.1-alpha.4" }

thiserror = "1.0.63"
clap = "4.5.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
polars = "0.41.3"
rayon = "1.10.0"
nalgebra = "0.33.0"
