[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.8"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/emesh-converter"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha.8" }
emesh = { version = "0.0.1-alpha.8" }
egraphics = { version = "0.0.1-alpha.8" }

thiserror = "2.0.12"
anyhow = "1.0.98"
clap = "4.5.42"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rayon = "1.10.0"
nalgebra = "0.34.0"
