[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.9"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/envis-space/emesh-converter"

[workspace.dependencies]
ecoord = { version = "0.0.1-alpha.9" }
emesh = { version = "0.0.1-alpha.9" }
egraphics = { version = "0.0.1-alpha.9" }

thiserror = "2.0.17"
anyhow = "1.0.100"
clap = "4.5.50"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rayon = "1.11.0"
nalgebra = "0.34.1"
