[package]
name = "emesh-converter"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for converting 3D polygon meshes to other representations."


[dependencies]
emesh-converter-core = { version = "0.0.1-alpha.3", path = "../emesh-converter-core" }
